Closed Bug 1804017 Opened 1 year ago Closed 1 year ago

Crash in [@ mozilla::Maybe<T>::emplace | nsPrintJob::ReflowPrintObject]

Categories

(Core :: Printing: Setup, defect)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- unaffected
firefox109 --- fixed

People

(Reporter: gsvelto, Assigned: alaskanemily)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/b871f846-bdb3-42be-a0b8-14c340221204

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(!isSome())

Top 10 frames of crashing thread:

0  xul.dll  mozilla::Maybe<bool>::emplace  mfbt/Maybe.h:844
0  xul.dll  nsPrintJob::ReflowPrintObject  layout/printing/nsPrintJob.cpp:1315
1  xul.dll  nsPrintJob::ReflowDocList  layout/printing/nsPrintJob.cpp:957
2  xul.dll  nsPrintJob::ReflowDocList  layout/printing/nsPrintJob.cpp:960
3  xul.dll  nsPrintJob::InitPrintDocConstruction  layout/printing/nsPrintJob.cpp:996
4  xul.dll  nsPrintJob::DoCommonPrint  layout/printing/nsPrintJob.cpp:445
5  xul.dll  nsPrintJob::CommonPrint  layout/printing/nsPrintJob.cpp:334
6  xul.dll  nsPrintJob::PrintPreview  layout/printing/nsPrintJob.cpp:466
7  xul.dll  nsDocumentViewer::PrintPreview  layout/base/nsDocumentViewer.cpp:2966
8  xul.dll  nsGlobalWindowOuter::Print  dom/base/nsGlobalWindowOuter.cpp:5281

Given the time-frame this is most likely a regression from bug 1800546, Emily can you have a look please?

Flags: needinfo?(emcdonough)

Set release status flags based on info from the regressing bug 1800546

Yes, this is definitely caused by bug 1800546, it should be quite simple to fix.

Flags: needinfo?(emcdonough)
Assignee: nobody → emcdonough
Status: NEW → ASSIGNED

Thanks for the quick fix!

Pushed by emcdonough@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e42cc6df64cc
Fix asserts when ReflowPrintObject is called multiple times on the same print job r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: