Bug 1804017 - Fix asserts when ReflowPrintObject is called multiple times on the same print job r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D163877